Added documentation for track handlers
